fix: letter spacing for some textss

--- a/src/assets/sass/components/_PxCardHightlights.scss
+++ b/src/assets/sass/components/_PxCardHightlights.scss
@@ -4,6 +4,7 @@
   &-title {
     font-family: $font-regular;
     font-size: 1rem;
+    letter-spacing: 1px;
   }
   &-numbers {
     display: inline-flex;
