--- a/src/assets/sass/components/_PxFormSearchLocation.scss
+++ b/src/assets/sass/components/_PxFormSearchLocation.scss
@@ -32,6 +32,7 @@
       width: 100%;
       height: 100%;
       color: #ffffff;
+      letter-spacing: 1px;
       &::placeholder {
         color: #616475;
         font-family: $font-medium;
